src/test/ui/regions/region-object-lifetime-3.stderr
error: compilation successful
  --> $DIR/region-object-lifetime-3.rs:28:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

